[gd_scene load_steps=5 format=3 uid="uid://8g10h368hkv3"]

[ext_resource type="Script" path="res://enemies/EnemyGenerator.gd" id="1_g0er6"]
[ext_resource type="PackedScene" uid="uid://cek704auppdrr" path="res://enemies/green_enemy.tscn" id="2_ls1gr"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="2_to7nw"]
[ext_resource type="PackedScene" uid="uid://ctkg11m5y5ir8" path="res://enemies/yellow_enemy.tscn" id="3_8coie"]

[node name="EnemyGenerator" type="Node2D"]
script = ExtResource("1_g0er6")
GreenEnemyScene = ExtResource("2_ls1gr")
YellowEnemyScene = ExtResource("3_8coie")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("2_to7nw")

[node name="GreenEnemySpawnerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="YellowEnemySpawnerTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
